--- a/index.html
+++ b/index.html
@@ -42,17 +42,17 @@
         <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-            <h5 class="modal-title title-green" id="exampleModalLabel"><b>Digite sua mensagem</b></h5>
+            <h5 class="modal-title" id="exampleModalLabel"><b>Digite seu email para Download</b></h5>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
             </button>
             </div>
             <div class="modal-body">
                 <input type="email" class="form-control space-margin" id="emailTxt" placeholder="Digite seu email">
-                <textarea class="form-control" id="areaTxt" rows="3" placeholder="Escreva sua mensagem"></textarea>
+                <!-- <textarea class="form-control" id="areaTxt" rows="3" placeholder="Escreva sua mensagem"></textarea> -->
             </div>
             <div class="modal-footer">
-            <button type="button" class="btn btn-success btn-block" data-dismiss="modal" onclick="enviar()"><b>Enviar</b></button>
+            <button type="button" class="btn btn-warning btn-block" data-dismiss="modal" onclick="enviar()"><b>Enviar</b></button>
             </div>
         </div>
         </div>
