Adicionando a descrição do ebook

--- a/index.html
+++ b/index.html
@@ -18,16 +18,22 @@
 </head>
 
 <body>
-    <header>
-        <div class="container">
-            <div class="row h-80 position">
+    <header class="space-top">
+        <div class="container space-top">
+            <div class="row h-90 position">
                 <section class="img space-margin">
                     <img src="images/ogata.jpg" alt="Engenharia de Controle Moderno - Ogata - 5a Edição">
                 </section>
                 <section class="w-60 center background-txt">
-                    <h2 class="position"><b>Engenharia de Controle Moderno - Ogata - 5a Edição</b></h2>
-                    <p> Download do ebook: Engenharia de Controle Moderno - Ogata - 5a Edição</p>
-                    <div class="col-lg-12 col-md-12 col-sm-12">
+                    <h2 class="position"><b>Engenharia de Controle Moderno - KASUHIKO, Ogata - 5a Edição</b></h2>
+                    <p> Download do ebook: Engenharia de Controle Moderno - KASUHIKO, Ogata - 5a Edição, 2011.</p>
+                    <h4>Descrição</h3>
+                    <p class="justified">Engenharia de controle moderno chega à quinta edição renovado, com uma didática diferenciada que intensifica o processo 
+                    de ensino/aprendizagem - e faz com que passe despercebido o fato de o livro ter quatro décadas de mercado! Isso porque a obra, 
+                    que foi totalmente revista e reformulada, traz agora novos exercícios e exemplos, bem como exibições do MATLAB©, as quais 
+                    facilitam a utilização do programa na representação do conteúdo apresentado.Ideal para cursos como engenharia, automação industrial 
+                    e eletrotécnica, este clássico de Ogata não pode faltar na estante daqueles que, como a própria obra, querem fazer história.</p>
+                    <div class="col-lg-12 col-md-12 col-sm-12 space-top">
                         <button type="button" class="btn btn-warning btn-block center space-top space" data-toggle="modal" data-target="#telaEmail">
                             <i class="fas fa-download"></i> <b>DOWNLOAD</b> 
                         </button>
